# computational-fields

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
computational_fields/: __init__.py
computational_fields/blocks/: __init__.py  collection.py  composites.py  gradient.py  sparse.py  time_decay.py
computational_fields/core/: __init__.py  context.py  device.py  primitives.py
computational_fields/examples/: __init__.py  channel_demo.py  crowd_monitoring.py  gradient_demo.py
computational_fields/simulation/: __init__.py  engine.py  network.py  sensors.py
computational_fields/visualization/: __init__.py  dash_app.py  interactive.py  renderer.py
docs/: deployment.md  index.md
docs/api/: blocks.md  primitives.md  simulation.md
docs/demos/: channel.md  crowd-monitoring.md  gradient.md  overview.md  sparse-leaders.md
docs/getting-started/: first-steps.md  installation.md
docs/theory/: building-blocks.md  field-calculus.md  self-stabilisation.md
tests/: test_blocks.py  test_composites.py  test_network.py  test_primitives.py  test_simulation.py
