[project]
name = "computational-fields"
version = "0.1.0"
description = "Python implementation of Computational Fields and Aggregate Computing"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "pandas>=2.0",
    "dash>=2.15",
]

[project.optional-dependencies.streamlit]
streamlit = ["streamlit>=1.33"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
